# greek

./: .hgtags  Greek.hs  HISTORY  RunTests.hs  cabal.sandbox.config  greek.cabal  grind.sh  todo.txt
Data/Greek/: Normalize.hs  Order.hs  Output.hs  Parser.hs  Texty.hs  UnicodeData.hs  Word.hs
Data/Greek/Private/: Normalize.hs
Test/Data/Greek/: LetterGen.hs  Normalize.hs  Order.hs  Output.hs  Parser.hs  Utils.hs  Word.hs
lib/Data/Greek/: Normalize.hs  Output.hs  Parser.hs  UnicodeData.hs  Word.hs
lib/Data/Greek/Private/: Normalize.hs
test/: GreekLetterGen.hs  NormalizeTest.hs  OrderTest.hs  OutputTest.hs  ParserTest.hs  RunTests.hs  WordTest.hs
