Name:           greek
Version:        2.3.0
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Library for processing Greek text
Extra-source-files:    HISTORY
Build-Type:     Simple
License:        AllRightsReserved
Copyright:      (c) 2012 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Data
Description:    This package provides a representation of polytonic Greek letters and words, plus parsers and output renderers, as well as some basic utility functions on these data structures, like ordering.

Library
  Default-Language: Haskell2010
  Build-Depends:
    base == 4.8.*,
    containers == 0.5.*,
    rcc-exceptional == 0.6.*,
    textual >= 1.1.0
  Ghc-options: -fwarn-incomplete-patterns
  Exposed-modules:
    Data.Greek.Normalize,
    Data.Greek.Output,
    Data.Greek.Parser,
    Data.Greek.UnicodeData
    Data.Greek.Word
  Other-modules:
    -- Cabal has some magic to make private modules listed here available to
    -- the test suite below, but not to other clients of the library.
    Data.Greek.Private.Normalize

Test-Suite greek-tests
  main-is: RunTests.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns
  build-depends:
    base == 4.8.*,
    containers == 0.5.*,
    greek,
    rcc-exceptional == 0.6.*,
    HUnit == 1.5.*,
    QuickCheck == 2.9.*,
    test-utils == 1.4.*,
    text == 1.2.*,
    textual >= 1.1.0
