Name:           greek
Version:        2.3.0
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Library for processing Greek text
Extra-source-files:    HISTORY
Build-Type:     Simple
License:        AllRightsReserved
Copyright:      (c) 2012 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Data
Description:    This package provides a representation of polytonic Greek letters and words, plus parsers and output renderers, as well as some basic utility functions on these data structures, like ordering.

Library
  hs-source-dirs: lib
  Default-Language: Haskell2010
  Build-Depends:
    base == 4.8.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    textual >= 1.1.0
  Ghc-options: -fwarn-incomplete-patterns -O2
  Exposed-modules:
    Data.Greek.Normalize,
    Data.Greek.Output,
    Data.Greek.Parser,
    Data.Greek.UnicodeData,
    Data.Greek.Word,
    -- expose for unit tests                    
    Data.Greek.Private.Normalize

Test-Suite greek-tests
  main-is: RunTests.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns
  build-depends:
    base == 4.8.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    greek,
    HUnit == 1.5.*,
    QuickCheck == 2.9.*,
    test-utils == 1.4.*,
    text == 1.2.*,
    textual >= 1.1.0
