-- Copyright 2012-2017 Richard Cobbe
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.
        
Name:           greek
Version:        2.3.0
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Library for processing Greek text
Extra-source-files:    HISTORY
Build-Type:     Simple
License:        Apache-2.0
License-File:   LICENSE
Copyright:      (c) 2012-2017 Richard Cobbe
Maintainer:     rcobbe@rcobbe.net
Stability:      alpha
Category:       Data
Description:    This package provides a representation of polytonic Greek letters and words, plus parsers and output renderers, as well as some basic utility functions on these data structures, like ordering.

Library
  hs-source-dirs: lib
  Default-Language: Haskell2010
  Build-Depends:
    base == 4.8.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    textual >= 1.1.0
  Ghc-options: -fwarn-incomplete-patterns -O2
  Exposed-modules:
    Data.Greek.Normalize,
    Data.Greek.Output,
    Data.Greek.Parser,
    Data.Greek.UnicodeData,
    Data.Greek.Word

Test-Suite greek-tests
  main-is: RunTests.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  Ghc-options: -fwarn-incomplete-patterns
  build-depends:
    base == 4.8.*,
    containers == 0.5.*,
    transformers == 0.4.*,
    greek,
    HUnit == 1.5.*,
    QuickCheck == 2.9.*,
    test-utils == 1.4.*,
    text == 1.2.*,
    textual >= 1.1.0
